--- a/UseCases/UseCases.csproj
+++ b/UseCases/UseCases.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\CoreBusiness\CoreBusiness.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TransactionsUseCases\" />
+  </ItemGroup>
+
 </Project>
