- Created connection on server explorer - Added connection string into the development environment configuration file. - Passed the connection to the DbContect class

--- a/SPManagementSystem/appsettings.Development.json
+++ b/SPManagementSystem/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "StoreManagement": "Data Source=LAPTOP-K3OTDM6F;Initial Catalog=StoreManagement;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
