--- a/SPManagementSystem/appsettings.json
+++ b/SPManagementSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AccountContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SPManagementSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
